Regression: Animation player greys out when window is resized #114192

Closed
opened 2023-10-27 12:45:02 +02:00 by Wouter Stomp · 4 comments

System Information
Operating system: macOS-14.0-arm64-arm-64bit 64 Bits
Graphics card: Metal API Apple M1 Max 1.2

Blender Version
Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-10-26 13:50, hash: c50b68285810
Worked: 3.6.4

Short description of error
When the animation player window is resized the contents grey out.

Exact steps for others to reproduce the error
Render an animation
Render -> view animation
Resize the animation player window

See screenshots (the animation only filling a quarter of the screen is another bug #70036)

**System Information** Operating system: macOS-14.0-arm64-arm-64bit 64 Bits Graphics card: Metal API Apple M1 Max 1.2 **Blender Version** Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-10-26 13:50, hash: `c50b68285810` Worked: 3.6.4 **Short description of error** When the animation player window is resized the contents grey out. **Exact steps for others to reproduce the error** Render an animation Render -> view animation Resize the animation player window See screenshots (the animation only filling a quarter of the screen is another bug #70036)
Wouter Stomp added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-10-27 12:45:03 +02:00

I can't reproduce due to crash on Mac. Linux seems fine.

I can't reproduce due to crash on Mac. Linux seems fine.
Author

@iss are you on today's build? Yesterdays build was still crashing on Mac with the animation player due to #114156

@iss are you on today's build? Yesterdays build was still crashing on Mac with the animation player due to #114156
Member

Hi, can we check again this issue? Looks critical for 4.0
Unable to confirm on Windows at least

Hi, can we check again this issue? Looks critical for 4.0 Unable to confirm on Windows at least
Wouter Stomp changed title from Animation player greys out when window is resized (regression from 3.6) to Animation player greys out when window is resized (MacOS, regression from 3.6) 2023-11-02 08:48:52 +01:00

Did re-check this with recent build and can reproduce the issue

Did re-check this with recent build and can reproduce the issue
Richard Antalik changed title from Animation player greys out when window is resized (MacOS, regression from 3.6) to Regression: Animation player greys out when window is resized 2023-11-06 05:25:33 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-11-07 15:35:56 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114192
No description provided.